--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,16 +1,20 @@
-- name: Pricing
+- name: Preços
   link: /pricing/
+  new_window: false
+  highlight: false
+  - name: Nossa Cobertura
+  link: /cobertura/
   new_window: false
   highlight: false
 - name: Blog
   link: /blog/
   new_window: false
   highlight: false
-- name: About
+- name: Sobre
   link: /about/
   new_window: false
   highlight: false
-- name: Contact
+- name: Contato
   link: /contact/
   new_window: false
   highlight: false
