--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,9 +1,9 @@
 - links:
-  - name: Pricing
+  - name: Preços
     link: /pricing/
   - name: Blog
     link: /blog/
-  - name: About
+  - name: Sobre
     link: /about/
   - name: Contact
     link: /contact/
