--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -5,7 +5,7 @@
     link: /blog/
   - name: Sobre
     link: /about/
-  - name: Contact
+  - name: Contato
     link: /contact/
 - links:
   - name: Login
