--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,7 +22,7 @@
   link: /
   new_window: true
   highlight: false
-- name: Sign Up
+- name: Fale com nossos Consultores
   link: /
   new_window: true
   highlight: true
