--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description: Adequação completa da nova lei LGPD para blogs e aplicações em 
 author: lgpdwp
   name: LGPD-Wordpress
   email: suporte@lgpd-wp.com.br
-  twitter: lgpd-wp
+  twitter: lgpdwp
 social:
   name: LGDP para Wordpress
   links:
