--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ disqus_shortname:
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /lgpdwp.png
 description: Adequação completa da nova lei LGPD para blogs e aplicações em Wordpress.
-author: anna
+author: 
   name: LGPD-Wordpress
   email: suporte@lgpd-wp.com.br
   twitter: lgpdwp
