--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,10 @@
   link: /pricing/
   new_window: false
   highlight: false
+  - name: Conheça a Lei
+  link: /pricing/
+  new_window: false
+  highlight: false
 - name: Blog
   link: /blog/
   new_window: false
