--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
   link: /pricing/
   new_window: false
   highlight: false
-  - name: A Lei
+  - name: Lei
   link: /pricing/
   new_window: false
   highlight: false
