--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
   link: /pricing/
   new_window: false
   highlight: false
-- name: Lei
-  link: /pricing/
+- name: Conheça a Lei
+  link: http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/L13709.htm
   new_window: false
   highlight: false
 - name: Blog
