--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -26,7 +26,7 @@
   link: /
   new_window: true
   highlight: false
-- name: Sala de Treinamento
+- name: Treinamento (EAD)
   link: /
   new_window: true
   highlight: false
